--- a/script/templates/pixel.html
+++ b/script/templates/pixel.html
@@ -39,7 +39,7 @@
                 <button type="button" class="close" data-dismiss="modal">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="modal-label">説明とか</h4>
+                <h4 class="modal-title" id="modal-label">説明</h4>
             </div>
             <div class="modal-body">
                 <p>
