--- a/script/templates/pixel.html
+++ b/script/templates/pixel.html
@@ -163,6 +163,7 @@
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
         </div>
+        <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" style="position: relative;left: 15px;" data-chrome="nofooter noborders">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
         {% endif %}
         {% if error %}
         <div class="modal fade in" id="alert" tabindex="-1">
