--- a/script/templates/pixel.html
+++ b/script/templates/pixel.html
@@ -82,7 +82,7 @@
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>圖像(最大2MB)</label>
-                    <input type="file" name="image" accept='image/png,image/jpeg'>
+                    <input type="file" name="image" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi'>
                 </div>
                 <div class="form-group">
                     <div>顏色數量</div>
@@ -120,7 +120,7 @@
             </form>
             <div class="add-margin-top">
                 <a href="https://twitter.com/share" class="twitter-share-button"
-                   data-url="https://jingshing.com/" data-text="像素風濾鏡工具" data-size="large"
+                   data-url="https://pixel.jingshing.com/" data-text="像素風濾鏡工具" data-size="large"
                    data-hashtags="像素風濾鏡工具" data-lang="en">Tweet</a>
                 <script>
                     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
