--- a/script/templates/pixel.html
+++ b/script/templates/pixel.html
@@ -81,7 +81,7 @@
         <div class="col-md-3">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label>圖像(最大2MB)</label>
+                    <label>圖像、GIF或影片(最大2MB) <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></label>
                     <input type="file" name="image" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi'>
                 </div>
                 <div class="form-group">
@@ -184,12 +184,12 @@
         <div class="col-md-9">
             <a class="twitter-timeline"
                href="https://twitter.com/search?q="
-               data-widget-id="865822650572054529" data-chrome="nofooter noborders">#像素風濾鏡工具</a>
+               data-widget-id="865822650572054529" data-chrome="nofooter noborders" target="_blank">#像素風濾鏡工具</a>
             <script>
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
         </div>
-        <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" style="position: relative;left: 15px;" data-chrome="nofooter noborders">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
+        <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" style="position: relative;left: 15px;" data-chrome="nofooter noborders" target="_blank">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
         {% endif %}
         {% if error %}
         <div class="modal fade in" id="alert" tabindex="-1">
