--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -85,6 +85,7 @@
                     <label>圖像、GIF或影片(最大2MB) <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></label>
                     <input type="file" name="image" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi'>
                     <input type="hidden" name="last_image" value="{{last_image}}">
+                    <input type="hidden" name="language" value="{{language}}">
                 </div>
                 <div class="form-group">
                     <div>顏色數量</div>
@@ -241,5 +242,12 @@
     });
 </script>
 {% endif %}
+<script>
+    function set_language(){
+        document.getElementsByName("language")[0].value = 'tch';
+    }
+    set_language()
+    document.body.addEventListener('click',set_language, false);
+</script>
 </body>
 </html>
