--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -121,7 +121,7 @@
                     <!-- <label class="radio-inline"><input name="saturation" type="radio" value="-200">-200</label> -->
                     <label class="radio-inline"><input name="saturation" type="radio" value="-100">-100</label>
                     <label class="radio-inline"><input name="saturation" type="radio" value="-50">-50</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="0" checked>None</label>
+                    <label class="radio-inline"><input name="saturation" type="radio" value="0" checked>0</label>
                     <label class="radio-inline"><input name="saturation" type="radio" value="50">50</label>
                     <label class="radio-inline"><input name="saturation" type="radio" value="100">100</label>
                     <!-- <label class="radio-inline"><input name="saturation" type="radio" value="200">200</label> -->
@@ -133,7 +133,7 @@
                     <!-- <label class="radio-inline"><input name="contrast" type="radio" value="-200">-200</label> -->
                     <label class="radio-inline"><input name="contrast" type="radio" value="-100">-100</label>
                     <label class="radio-inline"><input name="contrast" type="radio" value="-50">-50</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="0" checked>None</label>
+                    <label class="radio-inline"><input name="contrast" type="radio" value="0" checked>0</label>
                     <label class="radio-inline"><input name="contrast" type="radio" value="50">50</label>
                     <label class="radio-inline"><input name="contrast" type="radio" value="100">100</label>
                     <!-- <label class="radio-inline"><input name="contrast" type="radio" value="200">200</label> -->
