--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -88,14 +88,14 @@
                     <input type="hidden" name="language" value="{{language}}">
                 </div>
                 <div class="form-group">
-                    <div>顏色數量</div>
+                    <div>顏色數量(幾bit的風格)</div>
                     <label class="radio-inline"><input name="k" type="radio" value="2">2</label>
                     <label class="radio-inline"><input name="k" type="radio" value="4" checked>4</label>
                     <label class="radio-inline"><input name="k" type="radio" value="8">8</label>
                     <label class="radio-inline"><input name="k" type="radio" value="16">16</label>
                 </div>
                 <div class="form-group">
-                    <div>像素大小</div>
+                    <div>像素大小(每個像素顆粒的大小)</div>
                     <label class="radio-inline"><input name="scale" type="radio" value="1">1</label>
                     <label class="radio-inline"><input name="scale" type="radio" value="2" checked>2</label>
                     <label class="radio-inline"><input name="scale" type="radio" value="3">3</label>
@@ -103,14 +103,14 @@
                     <label class="radio-inline"><input name="scale" type="radio" value="5">5</label>
                 </div>
                 <div class="form-group">
-                    <div>平滑化圖片</div>
+                    <div>平滑化圖片(將局部模糊)</div>
                     <label class="radio-inline"><input name="blur" type="radio" value="0" checked>無</label>
                     <label class="radio-inline"><input name="blur" type="radio" value="50">弱</label>
                     <label class="radio-inline"><input name="blur" type="radio" value="100">中</label>
                     <label class="radio-inline"><input name="blur" type="radio" value="200">強</label>
                 </div>
                 <div class="form-group">
-                    <div>輪廓線增強</div>
+                    <div>輪廓線增強(增強線條效果)</div>
                     <label class="radio-inline"><input name="erode" type="radio" value="0" checked>無</label>
                     <label class="radio-inline"><input name="erode" type="radio" value="1">弱</label>
                     <label class="radio-inline"><input name="erode" type="radio" value="2">強</label>
