--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -251,6 +251,7 @@
         }
     }
     function set_language(){
+        load_language();
         document.getElementsByName("language")[0].value = 'tch';
         localStorage.setItem('language', 'traditional_chinese');
     }
