--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -29,7 +29,7 @@
                 <li><a href="https://twitter.com/shing_jing" target="_blank">Twitter</a></li>
                 <li><a href="https://github.com/JingShing/Pixel-Art-Filter-Web" target="_blank">GitHub</a></li>
                 <li><a href="https://jingshing.com/" target="_blank">SITE</a></li>
-                <li><a href="{{url_for('english')}}" target="_blank">English</a></li>
+                <li><a href="{{url_for('english')}}">English</a></li>
             </ul>
         </div>
     </div>
