--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -99,6 +99,8 @@
                     <label class="radio-inline"><input name="k" type="radio" value="4" checked>4</label>
                     <label class="radio-inline"><input name="k" type="radio" value="8">8</label>
                     <label class="radio-inline"><input name="k" type="radio" value="16">16</label> -->
+                </div>
+                <div class="form-group">
                     <div>像素大小(每個像素顆粒的大小)</div>
                     <select class="radio-inline" name="scale">
                         <option value="1">1</option>
