--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -9,8 +9,25 @@
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="static/icon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="static/icon32.png" sizes="32x32">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-67548213-4', 'auto');
+  ga('send', 'pageview');
+    </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-8801073924550495",
+        enable_page_level_ads: true
+      });
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -79,69 +96,55 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
-                <div class="form-group">
-                    <label>圖像、GIF或影片(最大2MB) <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></label>
-                    <input type="file" name="image" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi'>
+                <div class="form-group col-xs-12">
+                    <a id="file_select" class="btn btn-default">
+                        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>開啟檔案
+                    </a>
+                    <span id="file_info" class="help-block">圖像、GIF或影片(最大2MB) <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></span>
+                    <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi' style="display:none;">
                     <input type="hidden" name="last_image" value="{{last_image}}">
                     <input type="hidden" name="language" value="{{language}}">
                 </div>
-                <div class="form-group">
-                    <div>顏色數量(幾bit的風格)</div>
-                    <select class="radio-inline" name="k">
+                <div class="form-group col-xs-6">
+                    <label class="control-label" for="k">顏色數量(幾bit的風格)</label>
+                    <select class="form-control" id="k" name="k">
                         <option value="2">2</option>
                         <option value="4" selected>4</option>
                         <option value="8">8</option>
                         <option value="16">16</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="k" type="radio" value="2">2</label>
-                    <label class="radio-inline"><input name="k" type="radio" value="4" checked>4</label>
-                    <label class="radio-inline"><input name="k" type="radio" value="8">8</label>
-                    <label class="radio-inline"><input name="k" type="radio" value="16">16</label> -->
                 </div>
-                <div class="form-group">
-                    <div>像素大小(每個像素顆粒的大小)</div>
-                    <select class="radio-inline" name="scale">
+                <div class="form-group col-xs-6">
+                    <label for="scale">像素大小(像素顆粒大小)</label>
+                    <select class="form-control" id="scale" name="scale">
                         <option value="1">1</option>
                         <option value="2" selected>2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="scale" type="radio" value="1">1</label>
-                    <label class="radio-inline"><input name="scale" type="radio" value="2" checked>2</label>
-                    <label class="radio-inline"><input name="scale" type="radio" value="3">3</label>
-                    <label class="radio-inline"><input name="scale" type="radio" value="4">4</label>
-                    <label class="radio-inline"><input name="scale" type="radio" value="5">5</label> -->
                 </div>
-                <div class="form-group">
-                    <div>平滑化圖片(將局部模糊)</div>
-                    <select class="radio-inline" name="blur">
+                <div class="form-group col-xs-6">
+                    <label for="blur">平滑化圖片(將局部模糊)</label>
+                    <select class="form-control" id="blur" name="blur">
                         <option value="0" selected>無</option>
                         <option value="50">弱</option>
                         <option value="100">中</option>
                         <option value="200">強</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="blur" type="radio" value="0" checked>無</label>
-                    <label class="radio-inline"><input name="blur" type="radio" value="50">弱</label>
-                    <label class="radio-inline"><input name="blur" type="radio" value="100">中</label>
-                    <label class="radio-inline"><input name="blur" type="radio" value="200">強</label> -->
                 </div>
-                <div class="form-group">
-                    <div>輪廓線增強(增強線條效果)</div>
-                    <select class="radio-inline" name="erode">
+                <div class="form-group col-xs-6">
+                    <label for="erode">輪廓線增強(增強線條效果)</label>
+                    <select class="form-control" id="erode" name="erode">
                         <option value="0" selected>無</option>
                         <option value="1">弱</option>
                         <option value="2">強</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="erode" type="radio" value="0" checked>無</label>
-                    <label class="radio-inline"><input name="erode" type="radio" value="1">弱</label>
-                    <label class="radio-inline"><input name="erode" type="radio" value="2">強</label> -->
                 </div>
-                <div class="form-group">
-                    <div>飽和度更改</div>
-                    <select class="radio-inline" name="saturation">
+                <div class="form-group col-xs-6">
+                    <label for="saturation">飽和度增減</label>
+                    <select class="form-control" id="saturation" name="saturation">
                         <option value="-250">-250</option>
                         <option value="-200">-200</option>
                         <option value="-150">-150</option>
@@ -154,19 +157,10 @@
                         <option value="200">200</option>
                         <option value="250">250</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="saturation" type="radio" value="-250">-250</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="-200">-200</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="-100">-100</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="-50">-50</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="0" checked>無</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="50">50</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="100">100</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="200">200</label>
-                    <label class="radio-inline"><input name="saturation" type="radio" value="250">250</label> -->
                 </div>
-                <div class="form-group">
-                    <div>對比度增減</div>
-                    <select class="radio-inline" name="contrast">
+                <div class="form-group col-xs-6">
+                    <label for="contrast">對比度增減</label>
+                    <select class="form-control" id="contrast" name="contrast">
                         <option value="-250">-250</option>
                         <option value="-200">-200</option>
                         <option value="-150">-150</option>
@@ -179,21 +173,19 @@
                         <option value="200">200</option>
                         <option value="250">250</option>
                     </select>
-                    <!-- <label class="radio-inline"><input name="contrast" type="radio" value="-250">-250</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="-200">-200</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="-100">-100</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="-50">-50</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="0" checked>無</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="50">50</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="100">100</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="200">200</label>
-                    <label class="radio-inline"><input name="contrast" type="radio" value="250">250</label> -->
                 </div>
-                <div class="form-group">
-                    <label><input name="alpha" type="checkbox" value="1" checked>導出為透明PNG</label>
-                    <label><input name="to_tw" type="checkbox" value="1" checked>Twitter角落1pixel透明(避免被Twitter強制轉成jpg)</label>
+                <div class="form-group col-xs-12">
+                    <div class="checkbox">
+                        <label><input id="alpha" name="alpha" type="checkbox" value="1" checked>導出為透明PNG</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input id="to_tw" name="to_tw" type="checkbox" value="1" checked>Twitter角落1pixel透明(避免被Twitter強制轉成jpg)</label>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">提交</button>
+                <div class="form-group col-xs-12">
+                <button type="submit" id="submit" class="btn btn-primary btn-block">
+                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>像素轉換按鈕
+                </button>
             </form>
             <div class="add-margin-top">
                 <a href="https://twitter.com/share" class="twitter-share-button"
@@ -205,8 +197,9 @@
                 <p>只是一個按鈕</p>
             </div>
         </div>
+        </div>
         {% if result %}
-        <div class="col-md-9 add-margin-top">
+        <div class="col-md-8 add-margin-top">
             <ul class="nav nav-tabs">
                 <li class="nav-item active">
                     <a href="#result" class="nav-link" data-toggle="tab">結果</a>
@@ -232,7 +225,7 @@
             </div>
         </div>
         {% elif vid_result %}
-        <div class="col-md-9 add-margin-top">
+        <div class="col-md-8 add-margin-top">
             <ul class="nav nav-tabs">
                 <li class="nav-item active">
                     <a href="#result" class="nav-link" data-toggle="tab">結果</a>
@@ -258,15 +251,16 @@
             </div>
         </div>
         {% else %}
-        <div class="col-md-9">
+        <div class="col-md-6">
             <a class="twitter-timeline"
-               href="https://twitter.com/search?q="
-               data-widget-id="865822650572054529" data-chrome="nofooter noborders" target="_blank">#像素風濾鏡工具</a>
+                href="https://twitter.com/search?q="
+                data-widget-id="865822650572054529" data-chrome="nofooter noborders" target="_blank">#像素風濾鏡工具</a>
             <script>
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
+            <br>
+            <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" data-chrome="nofooter noborders" target="_blank">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
         </div>
-        <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" style="position: relative;left: 15px;" data-chrome="nofooter noborders" target="_blank">#如果不想有大小限制，可以試試本地版：像素風濾鏡工具軟體</a>
         {% endif %}
         {% if error %}
         <div class="modal fade in" id="alert" tabindex="-1">
@@ -292,7 +286,16 @@
     });
 </script>
 {% endif %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
+<script src="static/js/js.cookie.js"></script>
+<script src="static/js/script.js"></script>
 <script>
+    $('#file_select').click(function(){
+        console.log('RRR');
+        $('#file_input').trigger('click'); 
+        }
+    );
     function load_language(){
         if(location.pathname.length==1){
             if(localStorage.getItem('language')!='traditional_chinese'){
